<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Piculinary</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="sea_background">sea background</string>
    <string name="table">table</string>
    <string name="sign">sign</string>
    <string name="about_us">About us</string>
    <string name="history">History</string>
    <string name="cuisine">Cuisine</string>
    <string name="phone">phone</string>
    <string name="menu">menu</string>
    <string name="about_aaron">about Aaron</string>
    <string name="about_piculinary">about Piculinary</string>
    <string name="about_alleyah">about Alleyah</string>
    <string name="notebook">notebook</string>
    <string name="arrow_back">arrow back</string>
    <string name="piculinary_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="contact_us">Contact us</string>
    <string name="piculinary_gmail_com"><u>piculinary@gmail.com</u></string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="alleyah_picture">Alleyah picture</string>
    <string name="picture_frame">picture frame</string>
    <string name="alleyah_full_name">Full Name: Alleyah Pauline C. Manalili</string>
    <string name="aaron_full_name">Full Name: Joseph Aaron L. Amora</string>
    <string name="alleyah_email">Email: <u>21100049@usc.edu.ph</u>, <u>apmmanalili@gmail.com</u></string>
    <string name="aaron_email">Email: <u>21103553@usc.edu.ph</u>, <u>amoraaaron22@gmail.com</u></string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="alleyah_age">Age: 21</string>
    <string name="aaron_age">Age: 22</string>
    <string name="citizenship">Citizenship/Nationality: Filipino</string>
    <string name="alleyah_gender">Gender: Female</string>
    <string name="aaron_gender">Gender: Male</string>
    <string name="language_proficiency">Language Proficiency:</string>
    <string name="alleyah_language_proficiency">&#8226; English (Written and Verbal)\n&#8226; Cebuano (Verbal)\n&#8226; Tagalog (Written and Verbal)</string>
    <string name="aaron_language_proficiency">&#8226; English (Written and Verbal)\n&#8226; Cebuano (Written and Verbal)\n&#8226; Tagalog (Written and Verbal)</string>
    <string name="computer_pms_and_software_skills">Computer PMS and Software Skills:</string>
    <string name="alleyah_skills" tools:ignore="TypographyOther">&#8226; Procedural Programming (C)\n&#8226; Object-Oriented Programming (Java)\n&#8226; Multiparadigm Programming (Python)\n&#8226;
        Web Development (HTML, CSS, JavaScript, React, VueJS, Laravel)\n&#8226; Database Management (MySQL, MSSQL)\n&#8226; Version Control Systems and Collaboration (Git, GitHub)
        \n&#8226; Mobile Application Development (Android Studio, Xamarin)</string>
    <string name="aaron_skills" tools:ignore="TypographyOther">&#8226; Procedural Programming (C)\n&#8226; Object-Oriented Programming (Java, C#)\n&#8226; Multiparadigm Programming (Python)\n&#8226;
        Web Development (HTML, CSS, JavaScript, React, VueJS, Laravel)\n&#8226; Database Management (MySQL)\n&#8226; Mobile Application Development (Android Studio, Xamarin)</string>
    <string name="aaron_picture">Aaron Picture</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="category">Category:</string>
    <string name="category_name">Category Name</string>
    <string name="ingredients">Ingredients:</string>
    <string name="ingredients_list">&#8226; Ingredient 1</string>
    <string name="instructions">Instructions:</string>
    <string name="instructions_list">1. Step 1</string>
    <string name="next_recipe">Next Recipe</string>
    <string name="cookbook_website_name">Cookbook Website Name</string>
    <string name="cuisine_picture">Cuisine Picture</string>
    <string name="percent">%</string>
    <string name="confidence_level">Confidence Level:</string>
    <string name="results">Results</string>
    <string name="arrow_left">Arrow Left</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="cuisine_image">Cuisine Image</string>
    <string name="frame">Frame</string>
    <string name="delete_button">Delete Button</string>
    <string name="result">Result</string>
    <string name="gmail_icon">gmail icon</string>
</resources>