<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sea_background"
        android:contentDescription="@string/sea_background"/>

    <!-- Arrow Back -->
    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintEnd_toStartOf="@id/guideline11"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline12"
        app:layout_constraintBottom_toTopOf="@id/guideline4"/>

    <!-- Sign Image -->
    <ImageView
        android:id="@+id/sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/sign"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        android:contentDescription="@string/sign"/>

    <!-- Sign Text -->
    <TextView
        android:id="@+id/about_us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:autoSizeMaxTextSize="1000dp"
        app:autoSizeMinTextSize="1dp"
        app:autoSizeTextType="uniform"
        android:shadowColor="#1A000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/about_us"
        android:textAlignment="center"
        android:textColor="@color/rose_ebony"
        android:textSize="28sp"
        android:translationY="5dp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <!-- Notebook -->
    <ImageView
        android:id="@+id/notebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/notebook"
        app:layout_constraintEnd_toStartOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline9"
        app:layout_constraintBottom_toTopOf="@id/guideline10"
        android:contentDescription="@string/notebook"/>

    <!-- Guidelines: Sign -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.535" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.096" />

    <!-- Guidelines: Sign Text -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.586" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />

    <!-- Guidelines: Notebook -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.035" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />


    <!-- Arrow Back -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.026" />

</androidx.constraintlayout.widget.ConstraintLayout>
